@@ -1,3 +1,8 @@
+2010-12-28  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* pychecker/Stack.py:
+	  Document and pep-8-ify.
+
 2010-12-27  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* pychecker/CodeChecks.py:
